Fixed the double scrollbar bug on the photography component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,7 @@ body {
 }
 
 body, html {
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 .enter-transition {
